benchmarks/configurations/dynamic_resources_eds.yaml
node:
  cluster: test-cluster
  id: test-id
admin:
  access_log_path: $tmpdir/envoyproxy-admin-access.log
  profile_path: $tmpdir/envoyproxy.prof
  address:
    socket_address: { address: $proxy_ip, port_value: 0 }
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: $proxy_ip
        port_value: 0
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          generate_request_id: false
          codec_type: AUTO
          stat_prefix: ingress_http
          internal_address_config:
            cidr_ranges:
            - address_prefix: $proxy_ip
              prefix_len: 32
          route_config:
            name: local_route
            virtual_hosts:
              - name: service
                domains:
                  - "*"
                routes:
                  - match:
                      prefix: /
                    route:
                      host_rewrite_literal: www.envoyproxy.io
                      cluster:  service_envoyproxy_io
          http_filters:
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: service_envoyproxy_io
    type: EDS
    eds_cluster_config:
      eds_config:
        path_config_source:
          path: $tmpdir/new_eds.pb
