benchmarks/configurations/envoy_proxy.yaml
admin:
  access_log_path: $tmpdir/envoyproxy-admin-access.log
  profile_path: $tmpdir/envoyproxy.prof
  address:
    socket_address: { address: $proxy_ip, port_value: 0 }
static_resources:
  listeners:
    - address:
        socket_address:
          address: $proxy_ip
          port_value: 0
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                generate_request_id: false
                codec_type: AUTO
                stat_prefix: ingress_http
                internal_address_config:
                  cidr_ranges:
                  - address_prefix: $proxy_ip
                    prefix_len: 32
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: local_service
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      dynamic_stats: false
  clusters:
    - name: local_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: local_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: $server_ip
                  port_value: $server_port
